--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description" content="Stay informed and uplifted with our Positive News web app. Discover heartwarming stories, inspiring events, and feel-good news from around the world. Vist now for a daily dose of positivity.">
   <link rel="stylesheet" href="picnic.css" type="text/css" media="screen">
   <link rel="stylesheet" href="style.css" type="text/css" media="screen">
 </head>
