adding footer section

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,18 @@
       <div id="news-container"></div>
   
       <button id="backToTopBtn" onclick="scrollToTop()">↑</button>
+      <footer class="footer ">
+        <div class="footer-header">About Us</div>
+        <ul class="links">
+          <li class="footer-githublogo">
+            <a href="https://github.com/TheNxtBigThing/BrightFeed">
+              <img src="github.png" alt="github logo" class="footer-githublogo" />
+            </a>
+          </li>
+        </ul>
+        <p>&copy; <span id="copyright-year"></span> <b>TheNxtBigThing</b>. All rights reserved.</p>
+      </footer>
+  
   
       <script>
         document.addEventListener('DOMContentLoaded', () => {
