--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
           </a>
         </li>
       </ul>
-      <p style="font-size: 30px;" >&copy; <span id="copyright-year"></span> <b>TheNxtBigThing</b>. All rights reserved.</p>
+      <p>&copy; <span id="copyright-year"></span> <b>TheNxtBigThing</b>. All rights reserved.</p>
     </footer>
 
 
