--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         <!-- <img src="sun.webp" alt="BrightFeed logo" width="15%" class="sun" /> -->
         <h2 class="brightfeed-logo">BrightFeed🌞</h2>
       </a>
-      <p style="margin-bottom: 50px;">spreading positivity through news</p>
+      <p style="margin-bottom: 50px; font-size: 1.5rem;">spreading positivity through news</p>
     </header>
 
     <div id="loading-text">
@@ -48,9 +48,8 @@
     <div id="news-container"></div>
 
     <button id="backToTopBtn" onclick="scrollToTop()">↑</button>
-    <footer class="footer ">
+    <footer class="footer">
       <hr>
-      <div class="footer-header">About Us</div>
       <ul class="links">
         <li class="footer-githublogo">
           <a href="https://github.com/TheNxtBigThing/BrightFeed">
@@ -58,9 +57,8 @@
           </a>
         </li>
       </ul>
-      <p>&copy; <span id="copyright-year"></span> <b>TheNxtBigThing</b>. All rights reserved.</p>
+      <p style="padding-bottom: 15px;">&copy; <span id="copyright-year"></span> <b><a href="https://github.com/TheNxtBigThing" target="_blank">TheNxtBigThing</a></b>. All rights reserved.</p>
     </footer>
-
 
     <script>
       document.addEventListener('DOMContentLoaded', () => {
